# mapeos_comunitarios

./: .gitignore  LICENSE  README.md  _quarto.yml  caminata_barrial_map.html  index.qmd  pyproject.toml  setup.py
_notebooks/: 0.0-collect-data.ipynb  0.1-migrant_collect-data.ipynb  3.0-visualize-data.ipynb
data/processed/: comunitario_data.csv  resistencias_data.csv
docs/: caminata_barrial_map.html  index.html  search.json
docs/site_libs/bootstrap/: bootstrap-2960ef82a4e32026d19740959cac50cf.min.css
outputs/figures/: caminata_barrial_map.html  resistencias_map.html
